--- a/HM1/task4.html
+++ b/HM1/task4.html
@@ -11,13 +11,13 @@
 
         let mode = 'normal';
         let my_valu3 = 102;
-        let 3my_value3 = '102';
+        //let 3my_value3 = '102';
         //Uncaught SyntaxError: Unexpected strict mode reserved word
         // Среда разработки также подсказывает, 
         // что нельзя начинать с цифры имя переменной
         let __hello__ = 'world';
         let $$$ = 'money';
-        let !0_world = true;
+        //let !0_world = true;
         //Uncaught SyntaxError: Unexpected strict mode reserved word
         // Среда разработки также подсказывает, 
         // что нельзя тспользовать спец символы для имени переменной
