--- a/HM2/task4.html
+++ b/HM2/task4.html
@@ -8,29 +8,36 @@
 <body>
     <script>
         'use strict';
-
         /**
-        * 
-        *
-        */
+         * Функция принимает два числа и складывает их.
+         */
         function getSum(a, b) {
             a += b;
             return a;
         }
         alert(getSum(6, 3));
-
+        
+        /**
+         * Функция принимает два числа и вычитает из первого второе.
+         */
         function getDiff(a, b) {
             a -= b;
             return a;
         }
         alert(getDiff(6, 3));
-
+        
+        /**
+         * Функция принимает два числа и умножает их.
+         */
         function getMult(a, b) {
             a *= b;
             return a;
         }
         alert(getMult(6, 3));
 
+        /**
+         * Функция принимает два числа и делит первое число на второе.
+         */
         function getDiv(a, b) {
             a /= b;
             return a;
