--- a/HM3/task2.html
+++ b/HM3/task2.html
@@ -9,35 +9,21 @@
     <script>
         'use strict';
 
-        const post = {
-            author: "John", //вывести этот текст
-            postId: 23,
-            comments: [
-                {
-                    userId: 10,
-                    userName: "Alex",
-                    text: "lorem ipsum",
-                    rating: {
-                        likes: 10,
-                        dislikes: 2 //вывести это число
-                    }
-                },
-                {
-                    userId: 5, //вывести это число
-                    userName: "Jane",
-                    text: "lorem ipsum 2", //вывести этот текст
-                    rating: {
-                        likes: 3,
-                        dislikes: 1
-                    }
-                },
-            ]
+        for (let count = 0; count <= 10; count++) {
+            if (count == 0) {
+                alert(`${count} - это ноль`);
+                continue;
+            }
+            if (count % 2 == 0) {
+                alert(`${count} - это четное число`);
+                continue;
+            }
+            if (count % 2 == 1) {
+                alert(`${count} - это нечетное число`);
+                continue;
+            }
         }
 
-        console.log(post.author);
-        console.log(post.comments[0].rating.dislikes)
-        console.log(post.comments[1].userId)
-        console.log(post.comments[1].text)
 
     </script>
 </body>
