--- a/HM3/task6.html
+++ b/HM3/task6.html
@@ -14,7 +14,7 @@
             /* здесь пусто */}
         /**
         * Функция выводит в консоле переданное число и
-        * и возвращает его обратно.
+        * и возвращает его.
         *
         */
         function alertNum(i) {
