--- a/HM5/task3.html/index.html
+++ b/HM5/task3.html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="magic.min.css">
 </head>
 <body>
     <button id="myBtn">Open model</button>
