--- a/HM5/task4/index.html
+++ b/HM5/task4/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="product">
         <div class="productName">Lamp</div>
-        <div class="datails hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <div class="datails ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
              Ullam officiis reiciendis sint iure, 
              obcaecati quibusdam quas similique exercitationem dolorum 
              doloremque aperiam quaerat omnis eius sapiente dolorem distinctio ab quia tempora!</div>
@@ -17,24 +17,23 @@
         <button>Datails</button>
     </div>
     <div class="product">
-        <div class="datails hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <div class="productName">Chair</div>
+        <div class="datails ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Ullam officiis reiciendis sint iure, 
             obcaecati quibusdam quas similique exercitationem dolorum 
             doloremque aperiam quaerat omnis eius sapiente dolorem distinctio ab quia tempora!</div>
-      
-        <div class="productName">Chair</div>
         <img src="img/product-2.jpg" alt="">
         <button>Datails</button>
     </div>
     <div class="product">
-        <div class="datails hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <div class="productName">Vase</div>
+        <div class="datails ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Ullam officiis reiciendis sint iure, 
             obcaecati quibusdam quas similique exercitationem dolorum 
             doloremque aperiam quaerat omnis eius sapiente dolorem distinctio ab quia tempora!</div>
-      
-        <div class="productName">Vase</div>
         <img src="img/product-3.jpg" alt="">
         <button>Datails</button>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
