Add count to task3

--- a/HM7/task3 snakeNew/index.html
+++ b/HM7/task3 snakeNew/index.html
@@ -11,10 +11,8 @@
 
 <body>
     <h3>Вы набрали:</h3>
-    <h2>1</h2> 
-    <h3>из</h3>
-    <h2>5</h2>
-    
+    <table id="countGame"></table>
+
     <table id="game"></table>
    
     <button id="startBtn">Старт</button>
