--- a/HM7/task3 snakeNew/index.html
+++ b/HM7/task3 snakeNew/index.html
@@ -20,7 +20,15 @@
 
     <div id="message"></div>
     
-    <script src="dist/app.js"></script>
+    <script src="src/Board.js"></script>
+    <script src="src/CountGame.js"></script>
+    <script src="src/Food.js"></script>
+    <script src="src/Game.js"></script>
+    <script src="src/Main.js"></script>
+    <script src="src/Menu.js"></script>
+    <script src="src/Settings.js"></script>
+    <script src="src/Snake.js"></script>
+    <script src="src/Status.js"></script>
 </body>
 
 </html>
